# busser

./: .gitignore  Cargo.toml  LICENSE  README.md  ops  sample.csv  sample.json  version
resources/test/: simple_test.csv  test_all_1.csv
src/: cmd.rs  columns.rs  infer.rs  keywords.rs  lib.rs  main.rs  reader.rs  view.rs
src/infer/: formats.rs  timeformats.rs
tests/: test_cmd.rs  test_csv_schema.rs  test_infer.rs
tests/helper/: mod.rs
tests/snapshots/: test_cmd__output_infer_simple.snap
