[package]
name = "busser"
version = "0.1.1"
edition = "2021"
authors = ["Jonathan Bowman"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argh = "0.1.10"
atoi = "2.0.0"
chrono = { version = "0.4.24", default-features = false }
csv = "1.1"
mimalloc = { version = "0.1.37", default-features = false }
simdutf8 = "0.1.4"

[dev-dependencies]
assert_cmd = "2.0.10"
assert_fs = "1.0.13"
insta = "1.29.0"
predicates = "3.0.2"
