[package]
name = "busser"
version = "0.1.2"
edition = "2021"
authors = ["Jonathan Bowman"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
argh = "0.1.10"
atoi = "2.0.0"
csv = "1.3.0"
mimalloc = { version = "0.1.39", default-features = false }
simdutf8 = "0.1.4"
time = { version = "0.3.34", features = ["macros", "parsing"] }

[dev-dependencies]
assert_cmd = "2.0.13"
assert_fs = "1.1.1"
insta = "1.34.0"
predicates = "3.1.0"

[profile.release]
opt-level = 3
debug = true
lto = "fat"
